build_k8s/hapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hapi
  name: hapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hapi
  template:
    metadata:
      labels:
        app: hapi
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: docker.pkg.github.com/eoscostarica/vaccine-traceability-poc/:ac0d8a0
          name: hapi
          ports:
            - containerPort: 3005
          resources:
            requests:
              cpu: 200m
            limits:
              cpu: "1"
