build_k8s/hasura-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hasura
  name: hasura
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      labels:
        app: hasura
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: docker.pkg.github.com/eoscostarica/vaccine-traceability-poc/:ac0d8a0
          name: hasura
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 150m
            limits:
              cpu: "1"
