build_k8s/wallet-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: wallet
    version: ac0d8a0
  name: wallet
spec:
  serviceName: wallet
  replicas: 1
  selector:
    matchLabels:
      app: wallet
      version: ac0d8a0
  template:
    metadata:
      labels:
        app: wallet
        version: ac0d8a0
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: docker.pkg.github.com/eoscostarica/vaccine-traceability-poc/wallet:ac0d8a0
          imagePullPolicy: "Always"
          name: "wallet"
          ports:
            - containerPort: 8888
          volumeMounts:
            - mountPath: /opt/application/data
              name: wallet
            - mountPath: /opt/application/config
              name: config-volume
      restartPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: wallet-config
  volumeClaimTemplates:
    - metadata:
        name: wallet
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: inmutrust
        resources:
          requests:
            storage: 50Gi
