build_k8s/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: docker.pkg.github.com/eoscostarica/vaccine-traceability-poc/:ac0d8a0
          name: webapp
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 150m
            limits:
              cpu: "1"
