build_k8s/hapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hapi
spec:
  selector:
    app: hapi
  ports:
    - port: 3005
      targetPort: 3005
      protocol: TCP
