build_k8s/hasura-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura
spec:
  selector:
    app: hasura
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
