build_k8s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`inmutrust.com`)
      services:
        - kind: Service
          name: webapp
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`inmutrust.com`)
      services:
        - kind: Service
          name: webapp
          port: 80
  tls:
    secretName: tls-secret
